--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -113,6 +113,8 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .fifth-home{
