--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -13,6 +13,13 @@
     font-size: 15px;
     
  }
+ .footer-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 100%;
+ }
  .lokanath{
     color: #1DA1F2;
     margin-left: .5rem;
